tests/machine/x/c/test_block.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/test_block.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/test_block.c:15:3: error: ‘test_addition_works_x’ undeclared (first use in this function); did you mean ‘test_addition_works’?
   15 |   test_addition_works_x = x;
      |   ^~~~~~~~~~~~~~~~~~~~~
      |   test_addition_works
/workspace/mochi/tests/machine/x/c/test_block.c:15:3: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/machine/x/c/test_block.c:15:27: error: ‘x’ undeclared (first use in this function)
   15 |   test_addition_works_x = x;
      |                           ^

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:54Z
