tests/machine/x/c/test_block.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:54Z
#include <stdio.h>
#include <stdlib.h>

static void test_addition_works() {
  int x = 1 + 2;
  if (!(x == 3)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  printf("ok\n");
  test_addition_works_x = x;
  test_addition_works();
  return 0;
}
